objects/ZdTicketComment__c.object
<CustomObject>
    <fields>
        <fullName>CommentBody__c</fullName>
        <label>CommentBody</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZdPVHCommentId__c</fullName>
        <externalId>true</externalId>
        <label>ZdPVHCommentId</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ZdPVHParentTicketId__c</fullName>
        <externalId>true</externalId>
        <label>ZdPVHParentTicketId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZdTnCCommentId__c</fullName>
        <externalId>true</externalId>
        <label>ZdTnCCommentId</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ZdTnCParentTicketId__c</fullName>
        <externalId>true</externalId>
        <label>ZdTnCParentTicketId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>created_at__c</fullName>
        <label>created_at</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Zendesk Ticket Comments</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zendesk Ticket Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>